<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/very_light_blue"
    tools:context=".shop_details">

    <!-- Shop Name TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/shop_name_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/Sn"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/shop_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="22sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Shop Owner TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/shop_owner_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/On"
        app:layout_constraintTop_toBottomOf="@+id/shop_name_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/shop_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="22sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Shop Address TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/shop_addr_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/addr"
        app:layout_constraintTop_toBottomOf="@+id/shop_owner_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/shop_addr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="22sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Shop Phone Number TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/shop_phno_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/phno"
        app:layout_constraintTop_toBottomOf="@+id/shop_addr_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/shop_phno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textSize="22sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Submit Button -->
    <Button
        android:id="@+id/shop_details_reg_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/submit"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@+id/shop_phno_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
